--- a/arches_hip/templates/views/components/add-item-button.htm
+++ b/arches_hip/templates/views/components/add-item-button.htm
@@ -1,6 +1,6 @@
 {% load i18n %}
 <!-- Add Button -->
-<div class="btn-group">
+<div class="btn-group" style="margin-left: 5px;">
     <button type="button" class="add-button btn btn-primary" style="height: 32px;">{% trans "Add" %}</button>
     <button type="button" class="btn btn-primary dropdown-toggle" style="height: 32px;" data-toggle="dropdown">
         <i class="fa fa-chevron-down"></i>
