--- a/arches_hip/templates/views/forms/summary.htm
+++ b/arches_hip/templates/views/forms/summary.htm
@@ -3,40 +3,42 @@
 
 {% block form_content %}
 <!-- Resource Type CRUD Form -->
-<div class="row">
-    <div class="col-xs-12">
-        <div class="padding-left-10">
-            
-            <dl>
-                <!-- Title -->
-                <dt>
-                    <h5 id="arches-names-form" class="section-headline">{% trans "Historic Resource Type" %}</h5>
-                </dt>
+<div id="heritage-type-section">
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="padding-left-10">
+                
+                <dl>
+                    <!-- Title -->
+                    <dt>
+                        <h5 id="arches-names-form" class="section-headline">{% trans "Historic Resource Type" %}</h5>
+                    </dt>
 
-                <!-- Form -->
-                <dd class="arches-RDM-labels">
+                    <!-- Form -->
+                    <dd class="arches-RDM-labels">
 
-                    <div class="row">
+                        <div class="row">
 
-                        <div class="col-xs-12 padding-left-0">
+                            <div class="col-xs-12 padding-left-0">
 
-                            <!-- Form for screens > xs -->
-                            <!-- <form class="form-inline " role="form"> -->
-                                <div class="form-group arches-form hidden-xs" style="width: 100%">
-                                    
-                                    <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
-                                    " data-bind="select2: { data: domains.HERITAGE_RESOURCE_TYPE_E55, placeholder: 'Type', viewModel: HERITAGE_RESOURCE_TYPE_E55, conceptKey: 'HERITAGE_RESOURCE_TYPE_E55'}"></div>
+                                <!-- Form for screens > xs -->
+                                <!-- <form class="form-inline " role="form"> -->
+                                    <div class="form-group arches-form hidden-xs" style="width: 100%">
+                                        
+                                        <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
+                                        " data-bind="value: getEdited('RESOURCE_TYPE_CLASSIFICATION.E55', 'value'), select2: {placeholder: 'Type', dataKey: 'RESOURCE_TYPE_CLASSIFICATION.E55'}"></div>
 
-                                </div>
-                            <!-- </form> -->
-                            <!-- Form for screens > xs -->
+                                    </div>
+                                <!-- </form> -->
+                                <!-- Form for screens > xs -->
+                            </div>
+
                         </div>
+                    </dd>
+                    <!-- End Form -->
+                </dl>
 
-                    </div>
-                </dd>
-                <!-- End Form -->
-            </dl>
-
+            </div>
         </div>
     </div>
 </div>
@@ -63,12 +65,12 @@
 
                             <div class="col-xs-12">
                                         
-                                <input class="form-control arches-form-input hidden-xs" id="resource-name" style="width: 50%;" placeholder="Name" data-bind='{value: editing.NAME_E41.NAME_E41__value}'>                                    
+                                <input class="form-control arches-form-input hidden-xs" id="resource-name" style="width: 50%;" placeholder="Name" data-bind='value: getEdited("NAME.E41", "value")'>                                    
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
                                 
-                                <div style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" data-bind="select2: { data: domains.NAME_TYPE_E55, placeholder: 'Type', viewModel: editing.NAME_E41, conceptKey: 'NAME_TYPE_E55'}"></div>
+                                <div style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" data-bind="value: getEdited('NAME_TYPE.E55', 'value'), select2: {placeholder: 'Type', dataKey: 'NAME_TYPE.E55'}"></div>
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
@@ -100,12 +102,12 @@
                     </dd>
 
                     <dd class="margin-left-5" style="display: none;" data-bind="visible: true">
-                        <div data-bind="visible: NAME_E41().length == 0" class="txt-color-blue">{% trans "No Names Defined" %}</div>   
-                        
-                        <div data-bind='foreach: NAME_E41'>
+                        <div data-bind="visible: branch_lists().length == 0" class="txt-color-blue">{% trans "No Names Defined" %}</div>   
+
+                        <div data-bind='foreach: branch_lists'>
                             <div class="arches-crud-record">
                                 <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this name"><i data-bind='attr: {"data-index": $index}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
-                                <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind='attr: {"data-index": $index}' title="Edit this name"><span data-bind='{text: NAME_E41__value}' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier">(<span data-bind='{text: NAME_TYPE_E55__label}'></span>)</span>
+                                <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind='attr: {"data-index": $index}' title="Edit this name"><span data-bind='text: nodes.get("NAME.E41", "value")' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier">(<span data-bind='text: nodes.get("NAME_TYPE.E55", "label")'></span>)</span>
                                 </a>
                             </div>
                         </div>
@@ -118,7 +120,92 @@
     <!-- End Name Records -->
 </div>
 
- <hr class="devider arches-RDM-divider">
+
+<hr class="devider arches-RDM-divider">
+
+<div id="dates-section">
+    <!-- Dates CRUD Form -->
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="padding-left-10">
+                
+                <dl>
+                    <!-- Title -->
+                    <dt>
+                        <h5 id="arches-names-form" class="section-headline">Important Dates</h5>
+                    </dt>
+
+                    <!-- Form -->
+                    <dd class="arches-RDM-labels">
+
+                        <div class="row">
+
+                            <div class="col-xs-12" style="padding-top: 2px;">
+
+                                <!-- Spacer (for xs screens) -->
+                                <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
+
+                                <div class="col-sm-6" style="padding-right: 5px;padding-left: 0px;">
+                                    <div style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" data-bind="value: getEdited('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), select2: {dataKey: 'important_dates'}">
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-4 form-group" style="padding-left: 0px; padding-right: 0px; width: 30%;">
+                                    <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
+                                        <input type="text" id="date" placeholder="{% trans 'Date' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEdited('START_DATE_OF_EXISTENCE.E49,END_DATE_OF_EXISTENCE.E49', 'value')} ">
+                                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                    </div>
+                                </div>
+
+                                <!-- Spacer (for xs screens) -->
+                                <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
+
+                                {% include 'views/components/add-item-button.htm' %}
+
+                            </div>
+                        </div>
+                    </dd>
+                    <!-- End Form -->
+                    <div class="alert alert-danger branch-invalid-alert" role="alert" style="display:none;">{% trans "The date and type values must be populated." %}</div>
+                </dl>
+
+            </div>
+        </div>
+    </div>
+    <!-- End Dates CRUD -->
+
+    <!-- Dates Records -->
+    <div class="row">
+        <div class="col-xs-12">
+
+            <!-- Address -->
+            <div class="arches-crud-child-section">
+                <dl>
+                    <dd class="arches-CRUD-child-title">
+                        {% trans "These dates are associated with this resource:" %}
+                    </dd>
+
+                    <dd class="margin-left-5" style="display: block;" data-bind="visible: true">
+                        <div data-bind="visible: branch_lists().length == 0" class="txt-color-blue">{% trans "No Dates Defined" %}</div>   
+                        
+                        <div data-bind='foreach: branch_lists'>
+                            <div class="arches-crud-record">
+                                <a href="javascript:void(0)" class="arches-CRUD-child" title="Remove this filter"><i data-bind='attr: {"data-index": $index}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
+                                <a href="javascript:void(0)" class="text-muted arches-CRUD-child arches-CRUD-edit" data-bind='attr: {"data-index": $index}' title="Edit this name"><span data-bind='text: nodes.get("BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55", "label") + " " + nodes.get("START_DATE_OF_EXISTENCE.E49,END_DATE_OF_EXISTENCE.E49", "value").substr(0,10)' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier"></span>
+                                </a>
+                            </div>
+                        </div>
+                    </dd>
+
+                </dl>
+
+            </div>
+        </div>
+    </div>
+    <!-- End Dates Records -->
+</div>
+
+<hr class="devider arches-RDM-divider">
 
 <div id="subjects-section">
     <!-- Modifications CRUD Form -->
@@ -133,27 +220,20 @@
                     </dt>
 
                     <!-- Form -->
-                    <dd class="arches-RDM-labels">
-
+                    <dd>
                         <div class="row">
+                            <div class="col-xs-12">
+                                <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="keyword-dropdown" data-bind="value: getEdited('KEYWORD.E55', 'value'), select2: {placeholder: 'Subject', dataKey: 'KEYWORD.E55'}"></div>
 
-                            <div class="col-xs-12 padding-left-0">
-                                <form class="form-inline arches-form hidden-xs" role="form">
-                                    <div class="form-group" style="width: 100%">
+                                <!-- Spacer (for xs screens) -->
+                                <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
 
-                                        <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="keyword-dropdown" data-bind="select2: { data: domains.KEYWORD_E55, placeholder: 'Subject', viewModel: editing.KEYWORD_E55, conceptKey: 'KEYWORD_E55'}"></div>
-
-                                        <!-- Spacer (for xs screens) -->
-                                        <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
-
-                                        {% include 'views/components/add-item-button.htm' %}
-
-                                    </div>
-                                </form>
+                                {% include 'views/components/add-item-button.htm' %}
                             </div>
                         </div>
                     </dd>
                     <!-- End Form -->
+                    <div class="alert alert-danger branch-invalid-alert" role="alert" style="display:none;">{% trans "The subject must be populated." %}</div>
                 </dl>
 
             </div>
@@ -172,12 +252,12 @@
                         {% trans "These subjects are associated with this resource:" %}
                     </dd>
                     <dd class="margin-left-5" style="display: none;" data-bind="visible: true">
-                        <div data-bind="visible: KEYWORD_E55().length == 0" class="txt-color-blue">{% trans "No Subjects Defined" %}</div>   
+                        <div data-bind="visible: branch_lists().length == 0" class="txt-color-blue">{% trans "No Subjects Defined" %}</div>   
                         
-                        <div data-bind='foreach: KEYWORD_E55'>
+                        <div data-bind='foreach: branch_lists'>
                             <div class="arches-crud-record">
                                 <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this subject"><i data-bind='attr: {"data-index": $index}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
-                                <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind='attr: {"data-index": $index}' title="Edit this subject"><span data-bind='{text: KEYWORD_E55__label}' style="padding-right:2px;"></span>
+                                <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind='attr: {"data-index": $index}' title="Edit this subject"><span data-bind='{text: nodes.get("KEYWORD.E55", "label")}' style="padding-right:2px;"></span>
                                 </a>
                             </div>
                         </div>
@@ -188,6 +268,6 @@
             </div>
         </div>
     </div>
-    <!-- End Threats Records -->
+
 </div>
 {% endblock form_content %}
