--- a/arches_hip/templates/views/forms/description.htm
+++ b/arches_hip/templates/views/forms/description.htm
@@ -19,7 +19,7 @@
 
                         <div class="row">
 
-                            <div class="col-xs-12 padding-left-0">
+                            <div class="col-xs-12">
 
                                 <!-- Form for screens > xs -->
                                 <form class="form-inline arches-form hidden-xs" role="form">
@@ -27,7 +27,7 @@
 
                                <!--          <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form description-type" id="resource-description-type" data-bind="value: editing.DESCRIPTION_E62.DESCRIPTION_TYPE_E55__value, select2: { data: domains.DESCRIPTION_TYPE_E55, placeholder: 'Type', viewModel: editing.DESCRIPTION_TYPE_E55, conceptKey: 'DESCRIPTION_TYPE_E55'}"></div>
  -->
-                                        <div style="width:80%; height: 36px; padding-top: 2px; padding-right: 4px; display: inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-unit" data-bind="select2: { data: domains.DESCRIPTION_TYPE_E55, placeholder: 'Type', viewModel: editing.DESCRIPTION_E62, conceptKey: 'DESCRIPTION_TYPE_E55'}"></div>
+                                        <div style="width:80%; height: 36px; padding-top: 2px; padding-right: 4px; display: inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-unit" data-bind="value: getEdited('DESCRIPTION_TYPE.E55', 'value'), select2: {placeholder: 'Type', dataKey: 'DESCRIPTION_TYPE.E55'}"></div>
 
                                         <!-- Spacer (for xs screens) -->
                                         <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>                                    
@@ -36,7 +36,7 @@
                                         
                                         <!-- Simple HTML Editor -->
                                         <div class="arches-html-editor margin-top-5" style="width: 80%;">
-                                            <div class="summernote" data-bind="value: editing.DESCRIPTION_E62.DESCRIPTION_E62__value, summernote: {value: editing.DESCRIPTION_E62.DESCRIPTION_E62__value, options:{}}"></div>
+                                            <div class="summernote" data-bind="summernote: {value: getEdited('DESCRIPTION.E62', 'value'), options:{}}"></div>
                                         </div>
 
                                     </div>
@@ -45,6 +45,7 @@
                             </div>
                         </div>
                     </dd>
+                    <div class="alert alert-danger branch-invalid-alert" role="alert" style="display:none;">{% trans "All values must be populated." %}</div>
                     <!-- End Form -->
                 </dl>
 
@@ -65,15 +66,15 @@
                     </dd>
 
                     <dd class="margin-left-5" style="display: none;" data-bind="visible: true">
-                        <div data-bind="visible: DESCRIPTION_E62().length == 0" class="txt-color-blue">{% trans "No Descriptions Defined" %}</div>   
+                        <div data-bind="visible: branch_lists().length == 0" class="txt-color-blue">{% trans "No Descriptions Defined" %}</div>   
                         
-                        <div data-bind='foreach: DESCRIPTION_E62'>
+                        <div data-bind='foreach: branch_lists'>
                             <dl class="margin-bottom-0"> 
                             
                                 <dd>
                                     <div class="">
                                         <a href="#" title="Remove this description"><i data-bind='attr: {"data-index": $index}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
-                                        <a href="#" class="arches-CRUD-child arches-CRUD-edit" title="Edit this description" data-bind='text: DESCRIPTION_TYPE_E55__label, attr: {"data-index": $index}'></a>
+                                        <a href="#" class="arches-CRUD-child arches-CRUD-edit" title="Edit this description" data-bind='text: nodes.get("DESCRIPTION_TYPE.E55", "label"), attr: {"data-index": $index}'></a>
                                     </div>
                                 </dd>
                             </dl>
@@ -81,7 +82,7 @@
                             <dl> 
 
                                 <dd>
-                                    <div class="note-editable custom-scroll arches-evaluation-content" contenteditable="true" data-bind='{html: DESCRIPTION_E62__value}'></div>
+                                    <div class="note-editable custom-scroll arches-evaluation-content" contenteditable="true" data-bind='{html: nodes.get("DESCRIPTION.E62", "value")}'></div>
                                 </dd>
                             </dl>
 
