--- a/arches_hip/templates/views/forms/measurement.htm
+++ b/arches_hip/templates/views/forms/measurement.htm
@@ -11,7 +11,7 @@
                 <dl>
                     <!-- Title -->
                     <dt>
-                        <h5 id="arches-measurement-form" class="section-headline">Measurements</h5>
+                        <h5 id="arches-measurement-form" class="section-headline">{% trans "Measurements" %}</h5>
                     </dt>
                     <!-- Form -->
                     <dd>
@@ -19,20 +19,17 @@
 
                             <div class="col-xs-12">
 
-                                <!-- Screens greater than xs -->                                        
                                 <!-- Measurement Type -->   
-                                <div style="width:30%; height: 36px; padding-top: 2px; display:inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-type" data-bind="select2: { data: domains.MEASUREMENT_TYPE_E55, placeholder: 'Type', viewModel: editing.MEASUREMENT_TYPE_E55, conceptKey: 'MEASUREMENT_TYPE_E55'}"></div>
+                                <div style="width:30%; height: 36px; padding-top: 2px; display:inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-type" data-bind="value: getEdited('MEASUREMENT_TYPE.E55', 'value'), select2: { placeholder: '{% trans "Type" %}', dataKey: 'MEASUREMENT_TYPE.E55'}"></div>
 
                                 <!-- Measurement Unit -->     
-                                <div style="width:30%; height: 36px; padding-top: 2px; padding-left: 4px; display:inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-unit" data-bind="select2: { data: domains.UNIT_OF_MEASUREMENT_E55, placeholder: 'Unit', viewModel: editing.MEASUREMENT_TYPE_E55, conceptKey: 'UNIT_OF_MEASUREMENT_E55'}"></div>
+                                <div style="width:30%; height: 36px; padding-top: 2px; padding-left: 4px; display:inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-unit" data-bind="value: getEdited('UNIT_OF_MEASUREMENT.E55', 'value'), select2: {placeholder: '{% trans "Unit" %}', dataKey: 'UNIT_OF_MEASUREMENT.E55'}"></div>
 
                                 <!-- Measurement Value -->
-                                <input class="form-control arches-form-input" id="measurement-value" style="width: 20%;" placeholder="value" data-bind='{value: editing.MEASUREMENT_TYPE_E55.VALUE_OF_MEASUREMENT_E60__value}'>
+                                <input class="form-control arches-form-input" id="measurement-value" style="width: 20%;" placeholder="value" data-bind="{value: getEdited('VALUE_OF_MEASUREMENT.E60', 'value')}">
                             
-                                <!-- Add Button -->
                                 {% include 'views/components/add-item-button.htm' %}
-                                <!-- End Add Button -->                                       
-                                <!-- End Screens greater than xs -->
+
                             </div>
                         </div>
                     </dd>
@@ -56,12 +53,12 @@
                     </dd>
 
                     <dd class="margin-left-5" style="display: none;" data-bind="visible: true">
-                        <div data-bind="visible: MEASUREMENT_TYPE_E55().length == 0" class="txt-color-blue">{% trans "No Measurements Defined" %}</div>   
+                        <div data-bind="visible: branch_lists().length == 0" class="txt-color-blue">{% trans "No Measurements Defined" %}</div>   
                         
-                        <div data-bind='foreach: MEASUREMENT_TYPE_E55'>
+                        <div data-bind='foreach: branch_lists'>
                             <div class="arches-crud-record">
-                                <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this measurement"><i data-bind='attr: {"data-index": $index}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
-                                <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind='attr: {"data-index": $index}' title="Edit this measurement"><span data-bind='{text: VALUE_OF_MEASUREMENT_E60__value}' style="padding-right:2px;"></span><span data-bind='{text: UNIT_OF_MEASUREMENT_E55__label}' style="padding-right:2px"></span><span class="text-muted arches-crud-type-identifier">(<span data-bind='{text: MEASUREMENT_TYPE_E55__label}'></span>)</span>
+                                <a href="javascript:void(0)" class="arches-CRUD-child" title="{% trans "Delete this measurement" %}"><i data-bind='attr: {"data-index": $index}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
+                                <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind='attr: {"data-index": $index}' title="Edit this measurement"><span data-bind="{text: nodes.get('VALUE_OF_MEASUREMENT.E60', 'value')}" style="padding-right:2px;"></span><span data-bind="{text: nodes.get('UNIT_OF_MEASUREMENT.E55', 'label')}" style="padding-right:2px"></span><span class="text-muted arches-crud-type-identifier">(<span data-bind="{text: nodes.get('MEASUREMENT_TYPE.E55', 'label')}"></span>)</span>
                                 </a>
                             </div>
                         </div>
