--- a/arches_hip/templates/views/forms/summary.htm
+++ b/arches_hip/templates/views/forms/summary.htm
@@ -19,7 +19,7 @@
 
                         <div class="row">
 
-                            <div class="col-xs-12">
+                            <div class="col-xs-12 hidden-xs">
 
                                 <input style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
                                 " data-bind="select2: {value: getEditedNode('RESOURCE_TYPE_CLASSIFICATION.E55', 'value'), placeholder: 'Type', multiple: false, dataKey: 'RESOURCE_TYPE_CLASSIFICATION.E55'}"></input>
@@ -27,6 +27,16 @@
                                 {% include 'views/components/add-item-button.htm' %}
 
                             </div>
+
+                            <div class="col-xs-12  hidden-sm hidden-md hidden-lg">
+
+                                <input style="width:100%; height: 36px; padding-top: 2px; margin-bottom: 5px" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
+                                " data-bind="select2: {value: getEditedNode('RESOURCE_TYPE_CLASSIFICATION.E55', 'value'), placeholder: 'Type', multiple: false, dataKey: 'RESOURCE_TYPE_CLASSIFICATION.E55'}"></input>
+
+                                {% include 'views/components/add-item-button.htm' %}
+
+                            </div>
+
 
                         </div>
                     </dd>
@@ -68,7 +78,7 @@
 <!-- End Rsource Type CRUD -->
 
 
-<hr class="devider arches-RDM-divider">
+<hr class="divider arches-RDM-divider">
 
 <div id="names-section">
     <!-- Name CRUD Form -->
@@ -86,21 +96,30 @@
                     <dd>
                         <div class="row">
 
-                            <div class="col-xs-12">
+                            <div class="col-xs-12 hidden-xs">
                                         
-                                <input class="form-control arches-form-input hidden-xs" id="resource-name" style="width: 50%;" placeholder="Name" data-bind='value: getEditedNode("NAME.E41", "value")'>                                    
-
-                                <!-- Spacer (for xs screens) -->
-                                <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
-                                
+                                <input class="form-control arches-form-input" id="resource-name" style="width: 50%;" placeholder="Name" data-bind='value: getEditedNode("NAME.E41", "value")'>                                    
                                 <input style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" data-bind="select2: {value: getEditedNode('NAME_TYPE.E55', 'value'), placeholder: 'Type', dataKey: 'NAME_TYPE.E55'}"></input>
-
-                                <!-- Spacer (for xs screens) -->
-                                <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
 
                                 {% include 'views/components/add-item-button.htm' %}
 
                             </div>
+
+                            <div class="col-xs-12 hidden-sm hidden-md hidden-lg">
+
+                                <input class="form-control arches-form-input" id="resource-name" style="width: 100%;" placeholder="Name" data-bind='value: getEditedNode("NAME.E41", "value")'>                                    
+                                <div class="margin-top-5"></div>
+                                
+                                <input style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type" id="resource-name-type" data-bind="select2: {value: getEditedNode('NAME_TYPE.E55', 'value'), placeholder: 'Type', dataKey: 'NAME_TYPE.E55'}"></input>
+
+                                <!-- Spacer (for xs screens) -->
+                                <div class="margin-top-5"></div>
+
+                                {% include 'views/components/add-item-button.htm' %}
+
+                            </div>
+
+
                         </div>
                     </dd>
                     <!-- End Form -->
@@ -144,7 +163,7 @@
 </div>
 
 
-<hr class="devider arches-RDM-divider">
+<hr class="divider arches-RDM-divider">
 
 <div id="dates-section">
     <!-- Dates CRUD Form -->
@@ -168,12 +187,24 @@
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
 
-                                <div class="col-sm-6" style="padding-right: 5px;padding-left: 0px;">
+                                <div class="col-sm-6 hidden-xs" style="padding-right: 5px;padding-left: 0px;">
                                     <input style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" placeholder="Date type" data-bind="select2: {value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'important_dates'}">
                                     </input>
                                 </div>
 
-                                <div class="col-sm-4 form-group" style="padding-left: 0px; padding-right: 0px; width: 30%;">
+                                <div class="col-sm-6 hidden-sm hidden-md hidden-lg" style="padding-right: 0px; padding-left: 0px;">
+                                    <input style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" placeholder="Date type" data-bind="select2: {value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'important_dates'}">
+                                    </input>
+                                </div>
+
+                                <div class="col-sm-4 form-group hidden-xs" style="padding-left: 0px; padding-right: 0px; width: 30%;">
+                                    <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
+                                        <input type="text" id="date" placeholder="{% trans 'yyyy-mm-dd' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('START_DATE_OF_EXISTENCE.E49,END_DATE_OF_EXISTENCE.E49', 'value')} ">
+                                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-4 form-group hidden-sm hidden-md hidden-lg" style="padding-left: 0px; padding-right: 0px; width: 100%; margin-bottom:0;">
                                     <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
                                         <input type="text" id="date" placeholder="{% trans 'yyyy-mm-dd' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('START_DATE_OF_EXISTENCE.E49,END_DATE_OF_EXISTENCE.E49', 'value')} ">
                                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
@@ -246,7 +277,9 @@
                     <dd>
                         <div class="row">
                             <div class="col-xs-12">
-                                <input style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="keyword-dropdown" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), placeholder: 'Subject', dataKey: 'KEYWORD.E55'}"></input>
+                                <input style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type hidden-xs" id="keyword-dropdown" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), placeholder: 'Subject', dataKey: 'KEYWORD.E55'}"></input>
+
+                                <input style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type  hidden-sm hidden-md hidden-lg" id="keyword-dropdown" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), placeholder: 'Subject', dataKey: 'KEYWORD.E55'}"></input>
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
